# Pre-DateGrip

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SECURITY.md  TODO.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  security-scan.yml  test.yml
.github/workflows/dependency-graph/: auto-submission.yml
.husky/: pre-commit  pre-push
backend/: CMakeLists.txt  ipc_handler.cpp  ipc_handler.h  main.cpp  webview_app.cpp  webview_app.h
backend/contexts/: database_context.cpp  database_context.h  export_context.cpp  export_context.h  io_context.cpp  io_context.h  settings_context.cpp  settings_context.h  system_context.cpp  system_context.h  utility_context.cpp  utility_context.h
backend/database/: async_query_executor.cpp  async_query_executor.h  connection_pool.cpp  connection_pool.h  connection_registry.cpp  connection_registry.h  connection_utils.cpp  connection_utils.h  driver_factory.cpp  driver_interface.h  odbc_driver_detector.cpp  odbc_unicode.h  query_history.cpp  schema_inspector.cpp  schema_inspector.h  sqlserver_driver.cpp  sqlserver_driver.h
backend/exporters/: csv_exporter.cpp
backend/interfaces/: cacheable.h  connectable.h  database_context.h  export_context.h  exportable.h  formattable.h  io_context.h  queryable.h  searchable.h  settings_context.h  storable.h  system_context.h  utility_context.h
backend/interfaces/parsers/: er_diagram_parser.h  er_model.h
backend/interfaces/providers/: async_query_provider.h  connection_provider.h  export_provider.h  io_provider.h  query_provider.h  schema_provider.h  search_provider.h  settings_provider.h  transaction_provider.h  utility_provider.h
backend/network/: ssh_tunnel.cpp
backend/parsers/: a5er_parser.cpp  a5er_parser.h  a5er_utils.cpp  a5er_utils.h  er_diagram_parser_factory.cpp  er_diagram_parser_factory.h  sql_parser.cpp  sql_parser.h
backend/providers/: async_query_provider.cpp  async_query_provider.h  connection_provider.cpp  connection_provider.h  export_provider.cpp  export_provider.h  io_provider.cpp  io_provider.h  query_provider.cpp  query_provider.h  schema_provider.cpp  schema_provider.h  search_provider.cpp  search_provider.h  settings_provider.cpp  settings_provider.h  transaction_provider.cpp  transaction_provider.h  utility_provider.cpp  utility_provider.h
backend/utils/: encoding.h  file_utils.cpp  glaze_meta.h  global_search.cpp  json_utils.cpp  json_utils.h  session_manager.cpp  session_manager.h  settings_manager.cpp  sql_validation.h
docs/: ARCHITECTURE.md  BUILD_COMMANDS.md  CODING_STANDARDS.md  PROJECT_INFO.md  TROUBLESHOOTING.md  VISUAL_STUDIO_SETUP.md
frontend/: biome.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: bridge.ts  mockData.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/common/: SimpleTable.tsx
frontend/src/components/diagram/: ERDiagram.module.css  ERDiagram.tsx  ShapeNode.module.css  ShapeNode.tsx  TableNode.module.css  TableNode.tsx  erDiagramUtils.ts  index.ts
frontend/src/components/dialogs/: A5ERImportDialog.module.css  A5ERImportDialog.tsx  ConnectionDialog.module.css  ConnectionDialog.tsx  DialogBase.module.css  ERImportDialog.tsx  ExecutionPlanDialog.module.css  ExecutionPlanDialog.tsx  SearchDialog.module.css  SearchDialog.tsx  SettingsDialog.module.css  SettingsDialog.tsx  index.ts  settingsUtils.ts
frontend/src/components/editor/: EditorTabs.module.css  EditorTabs.tsx  SqlEditor.tsx  completionProvider.ts  index.ts
frontend/src/components/export/: ExportDialog.tsx
frontend/src/components/grid/: CellEditor.module.css  CellEditor.tsx  GridFilterBar.tsx  GridStatusBar.tsx  GridTable.tsx  GridToolbar.tsx  ResultGrid.module.css  ResultGrid.tsx  ResultTabs.tsx  index.ts
frontend/src/components/history/: HistoryItem.tsx  QueryHistory.tsx  index.ts
frontend/src/components/layout/: BottomPanel.module.css  BottomPanel.tsx  CenterPanel.module.css  CenterPanel.tsx  LeftPanel.tsx  MainLayout.module.css  MainLayout.tsx  index.ts
frontend/src/components/table/: TableViewer.module.css  TableViewer.tsx
frontend/src/components/tree/: ConnectionTreeSection.tsx  ContextMenu.module.css  ObjectTree.module.css  ObjectTree.tsx  TreeNode.module.css  TreeNode.tsx  index.ts
frontend/src/hooks/: useERDiagramContext.ts  useKeyboardHandler.ts
frontend/src/store/: bookmarkStore.ts  connectionStore.ts  editStore.ts  erDiagramStore.ts  historyStore.ts  index.ts  queryStore.ts  schemaStore.ts  sessionStore.ts
frontend/src/store/query/: index.ts  queryStore.ts  types.ts
frontend/src/styles/: datagrip-dark-theme.css  global.css
frontend/src/tests/: App.test.tsx  setup.ts
frontend/src/theme/: agGridTheme.ts
frontend/src/types/: index.ts
frontend/src/utils/: a5erTextParser.ts  colorContrast.ts  erDiagramConstants.ts  erDiagramParser.ts  erDiagramUtils.ts  logger.ts  sqlFormat.ts  sqlParser.ts
scripts/: build.bat  build_backend.py  build_frontend.py  check-all.bat  check_all.py  convert_eol.py  cpp-check.bat  package.bat  package.py  pdg.py  run-lint.bat  setup_github_settings.py
scripts/_lib/: build.py  lint.py  release.py  test.py  utils.py
scripts/tests/: test_release.py
src/: CMakeLists.txt  ipc_handler.cpp  ipc_handler.h  webview_app.cpp
src/database/: async_query_executor.cpp  async_query_executor.h  connection_pool.cpp  odbc_driver_detector.cpp  odbc_driver_detector.h  sqlserver_driver.cpp  transaction_manager.cpp
src/utils/: credential_protector.cpp  credential_protector.h  global_search.cpp  global_search.h  session_manager.cpp  session_manager.h  settings_manager.cpp  settings_manager.h  simd_filter.cpp
tests/: CMakeLists.txt
tests/contexts/: test_settings_context.cpp  test_utility_context.cpp
tests/parsers/: test_a5er_parser.cpp
tests/providers/: test_settings_provider.cpp  test_utility_provider.cpp
tests/utils/: test_sql_validation.cpp
(+50 files in other folders)
